docs(interview): strip 5282 legacy > [!mcq] callouts from 151 json-backed files
MCQ now live exclusively in seed/mcq/*.json (all 250 gate-PASS). These inline
callouts were redundant duplicates banned by scripts/verify-md-no-mcq.sh.
Deterministic strip: only > [!mcq] callout blocks removed; ## Q headings, prose
answers, tables, code, See-also all preserved. Verified per file: heading count
unchanged + verify-md-no-mcq exit 0 + json still gate-PASS. JSON untouched.

Lane 1 of post-audit cleanup (ULTRATHINK.md 27c9b900). Lane 2 (54 single-blob
no-json files) follows.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>